bug #2606,数字格式化

--- a/Codebase/UnipeiApp/Pages/Unipei_Lottery.storyboard
+++ b/Codebase/UnipeiApp/Pages/Unipei_Lottery.storyboard
@@ -59,18 +59,18 @@
                                                             <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="￥" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PCr-Yd-aER">
-                                                            <rect key="frame" x="60" y="14" width="16" height="15"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="￥" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PCr-Yd-aER">
+                                                            <rect key="frame" x="60" y="14" width="15" height="15"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="15" id="AAZ-8D-fNG"/>
-                                                                <constraint firstAttribute="width" constant="16" id="W97-p0-wCf"/>
+                                                                <constraint firstAttribute="width" constant="15" id="W97-p0-wCf"/>
                                                             </constraints>
                                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                             <color key="textColor" red="0.93333333330000001" green="0.56078431370000004" blue="0.32156862749999998" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="800.0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vUQ-Ad-nPj">
-                                                            <rect key="frame" x="84" y="9" width="243" height="18"/>
+                                                            <rect key="frame" x="79" y="9" width="248" height="18"/>
                                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                                             <color key="textColor" red="0.93333333330000001" green="0.56078431370000004" blue="0.32156862749999998" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
@@ -159,16 +159,16 @@
                                                         <constraint firstAttribute="trailing" secondItem="Lmz-ox-pLh" secondAttribute="trailing" constant="16" id="A1y-Ld-HbC"/>
                                                         <constraint firstItem="Ynd-3N-vI9" firstAttribute="leading" secondItem="Pde-i3-rus" secondAttribute="trailing" constant="8" id="Aap-hr-Ais"/>
                                                         <constraint firstItem="im2-Th-Q4k" firstAttribute="top" secondItem="Bn3-Ak-0wR" secondAttribute="bottom" constant="8" id="Cfs-lM-hah"/>
+                                                        <constraint firstItem="PCr-Yd-aER" firstAttribute="centerY" secondItem="1Xm-mv-xZY" secondAttribute="centerY" id="CoK-UU-O6A"/>
                                                         <constraint firstItem="zhm-t8-laP" firstAttribute="top" secondItem="1Xm-mv-xZY" secondAttribute="bottom" constant="4" id="E7X-iq-x5v"/>
                                                         <constraint firstItem="Bn3-Ak-0wR" firstAttribute="top" secondItem="zhm-t8-laP" secondAttribute="bottom" constant="4" id="FK8-SA-HpI"/>
-                                                        <constraint firstItem="PCr-Yd-aER" firstAttribute="baseline" secondItem="1Xm-mv-xZY" secondAttribute="baseline" id="FOc-eb-yVJ"/>
                                                         <constraint firstItem="Pde-i3-rus" firstAttribute="leading" secondItem="im2-Th-Q4k" secondAttribute="trailing" constant="8" id="FZj-vM-wJo"/>
                                                         <constraint firstItem="1Xm-mv-xZY" firstAttribute="leading" secondItem="U5q-5n-yr6" secondAttribute="leading" constant="16" id="GDC-dY-kFs"/>
                                                         <constraint firstItem="1Xm-mv-xZY" firstAttribute="top" secondItem="U5q-5n-yr6" secondAttribute="top" constant="8" id="GtE-hJ-k2Z"/>
                                                         <constraint firstItem="Lmz-ox-pLh" firstAttribute="centerY" secondItem="im2-Th-Q4k" secondAttribute="centerY" id="KCG-Rr-XnJ"/>
                                                         <constraint firstItem="xOJ-Xg-vjU" firstAttribute="leading" secondItem="QYU-Wx-MbL" secondAttribute="trailing" constant="8" id="KQS-eb-Qjm"/>
                                                         <constraint firstItem="xOJ-Xg-vjU" firstAttribute="width" secondItem="1Xm-mv-xZY" secondAttribute="width" id="P1q-Q5-nWP"/>
-                                                        <constraint firstItem="vUQ-Ad-nPj" firstAttribute="leading" secondItem="PCr-Yd-aER" secondAttribute="trailing" constant="8" id="Q4U-En-PSg"/>
+                                                        <constraint firstItem="vUQ-Ad-nPj" firstAttribute="leading" secondItem="PCr-Yd-aER" secondAttribute="trailing" constant="4" id="Q4U-En-PSg"/>
                                                         <constraint firstItem="YMC-xT-Hzr" firstAttribute="leading" secondItem="xOJ-Xg-vjU" secondAttribute="trailing" constant="4" id="R7P-6z-baw"/>
                                                         <constraint firstAttribute="trailing" secondItem="zhm-t8-laP" secondAttribute="trailing" id="S9c-F9-p9a"/>
                                                         <constraint firstItem="Lmz-ox-pLh" firstAttribute="leading" secondItem="Ynd-3N-vI9" secondAttribute="trailing" constant="4" id="UOG-LE-ism"/>
