--- a/Codebase/UnipeiApp/Pages/Registe/UNPRegistedReferrerCell.xib
+++ b/Codebase/UnipeiApp/Pages/Registe/UNPRegistedReferrerCell.xib
@@ -7,15 +7,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="UNPRegistedReferrerCell" rowHeight="75" id="KGk-i7-Jjw" customClass="UNPRegistedReferrerCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="75"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="UNPRegistedReferrerCell" rowHeight="84" id="KGk-i7-Jjw" customClass="UNPRegistedReferrerCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="84"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="74"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="83"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="推荐人" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Iuj-fa-Mg3">
-                        <rect key="frame" x="8" y="8" width="80" height="17"/>
+                        <rect key="frame" x="8" y="8" width="80" height="27"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="80" id="t9R-l0-TBQ"/>
                         </constraints>
@@ -23,13 +23,16 @@
                         <color key="textColor" red="0.18087121212121215" green="0.18087121212121215" blue="0.18087121212121215" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="经销商名称必须一致，否则视为无推荐人" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aHf-wb-UNx">
-                        <rect key="frame" x="88" y="35" width="224" height="31"/>
+                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" verticalCompressionResistancePriority="1000" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="经销商名称必须一致，否则视为无推荐人" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aHf-wb-UNx">
+                        <rect key="frame" x="88" y="40" width="224" height="35"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="35" id="gqn-fL-FWV"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <textInputTraits key="textInputTraits"/>
                     </textField>
                     <button opaque="NO" tag="100" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uwO-GJ-L6j">
-                        <rect key="frame" x="88" y="7" width="20" height="20"/>
+                        <rect key="frame" x="88" y="12" width="20" height="20"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="20" id="4hU-Zt-Mjb"/>
                             <constraint firstAttribute="height" constant="20" id="8tb-RK-YWA"/>
@@ -37,7 +40,7 @@
                         <state key="normal" image="icon_radio_selected"/>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="经销商" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4my-Os-Svl">
-                        <rect key="frame" x="112" y="9" width="60" height="17"/>
+                        <rect key="frame" x="112" y="14" width="60" height="17"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="60" id="65g-CP-Su8"/>
                         </constraints>
@@ -46,7 +49,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" tag="101" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LgD-Er-z6J">
-                        <rect key="frame" x="176" y="8" width="20" height="20"/>
+                        <rect key="frame" x="176" y="13" width="20" height="20"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="20" id="CIZ-zY-bGK"/>
                             <constraint firstAttribute="width" constant="20" id="M8T-0Y-WQT"/>
@@ -54,7 +57,7 @@
                         <state key="normal" image="icon_radio_unselected"/>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="业务员姓名" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yTI-t3-8Mx">
-                        <rect key="frame" x="200" y="9" width="80" height="17"/>
+                        <rect key="frame" x="200" y="14" width="80" height="17"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="80" id="f7D-PD-fLC"/>
                         </constraints>
@@ -63,7 +66,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YEn-cV-r31">
-                        <rect key="frame" x="0.0" y="73" width="320" height="1"/>
+                        <rect key="frame" x="0.0" y="82" width="320" height="1"/>
                         <color key="backgroundColor" red="0.83927162247474751" green="0.83927162247474751" blue="0.83927162247474751" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="1" id="DKF-EL-8oX"/>
@@ -98,7 +101,7 @@
                 <outlet property="btnSalesman" destination="LgD-Er-z6J" id="JmQ-Bb-FL2"/>
                 <outlet property="tfName" destination="aHf-wb-UNx" id="g5W-za-xYq"/>
             </connections>
-            <point key="canvasLocation" x="397" y="300.5"/>
+            <point key="canvasLocation" x="397" y="305"/>
         </tableViewCell>
     </objects>
     <resources>
