--- a/Codebase/UnipeiApp/Pages/Registe/UNPRegistedUpLoadPicCell.xib
+++ b/Codebase/UnipeiApp/Pages/Registe/UNPRegistedUpLoadPicCell.xib
@@ -108,7 +108,7 @@
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="107" id="zB7-5t-Lcg"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
